@@ -1,3 +1,7 @@
+2002-08-14  Frank Ch. Eigler  <fche@redhat.com>
+
+	* mf-hooks.c: Remove #if-0 around hooks that are now ld-wrapped.
+
 2002-08-13  Graydon Hoare  <graydon@redhat.com>
 
 	* mf-runtime.c: Rework configuration to operate on
